// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderBar renders correctly 1`] = `
<div class="vd-header-bar-container w-100">
  <vappbar-stub color="white" height="120" tag="header" extensionheight="48" src="" value="true" role="banner" class="vd-header-bar transition-ease-in-out w-100">
    <vsheet-stub height="120" tag="div" class="vd-header-bar-content d-flex justify-center transition-ease-in-out px-14 py-7">
      <vsheet-stub width="100%" tag="div" class="d-flex align-center">
        <logobrandsection-stub theme="default" homelink="/"> </logobrandsection-stub>
        <!---->
        <!---->
      </vsheet-stub>
    </vsheet-stub>
    <!---->
  </vappbar-stub>
  <headernavigationdrawer-stub theme="default"> </headernavigationdrawer-stub>
</div>
`;

exports[`HeaderBar with smallMobileVersion renders correctly 1`] = `
<div class="vd-header-bar-container w-100">
  <vappbar-stub color="white" height="72" tag="header" extensionheight="48" src="" value="true" role="banner" class="vd-header-bar transition-ease-in-out w-100">
    <vsheet-stub height="72" tag="div" class="vd-header-bar-content d-flex justify-center transition-ease-in-out pa-4">
      <vsheet-stub width="100%" tag="div" class="d-flex align-center">
        <logobrandsection-stub theme="default" mobileversion="true" reducelogo="true" homelink="/"> </logobrandsection-stub>
        <vspacer-stub tag="div" class="h-100 mr-4 mr-md-16"></vspacer-stub>
        <!---->
      </vsheet-stub>
    </vsheet-stub>
    <!---->
  </vappbar-stub>
  <headernavigationdrawer-stub theme="default" mobileversion="true"> </headernavigationdrawer-stub>
</div>
`;
